--- a/La Création.html
+++ b/La Création.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>La Création</title>
-        <link rel="icon" href="../Ressources/Logo%20avec%20fond%20en%20cercle.png" type="image/png">
+        <link rel="icon" href="Ressources/Logo%20avec%20fond%20en%20cercle.png" type="image/png">
         <link rel="stylesheet" href="La%20création.css">
-        <link rel="stylesheet" href="../normalize.css">
+        <link rel="stylesheet" href="normalize.css">
     </head>
 
     <body>
@@ -16,15 +16,15 @@
                 <nav>
                     <p><h3>Menu</h3><br><br></p>
                     <ul>
-                        <li> <a href="../Accueil/Accueil.html">Accueil</a></li>
+                        <li> <a href="index.html">Accueil</a></li>
                         <br>
-                        <li><a href="../Nos%20Modèles/Nos%20Modèles.html">Nos Modèles</a></li>
+                        <li><a href="Nos%20Modèles.html">Nos Modèles</a></li>
                         <br>
-                        <li> <a href="../Nos%20Projets/Nos%20Projets.html">Nos Projets</a></li>
+                        <li> <a href="Nos%20Projets.html">Nos Projets</a></li>
                         <br>
-                        <li> <a href="../La%20Creation/La%20Création.html">La Création</a></li>
+                        <li> <a href="../La%20Creation/La Création.html">La Création</a></li>
                         <br>
-                        <li> <a href="../Contact/Contact.html">Contact</a></li>
+                        <li> <a href="Contact.html">Contact</a></li>
                         <br>
                     </ul>
                 </nav>
@@ -36,7 +36,7 @@
                    </div>
 
                    <div class="vid">
-                       <iframe width="560" height="315" src="../Ressources/HD%20Epic%20Sax%20Gandalf.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="vidgandalf"></iframe>
+                       <iframe width="560" height="315" src="Ressources/HD%20Epic%20Sax%20Gandalf.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="vidgandalf"></iframe>
                    </div>
 
                    <div class="step">
@@ -50,21 +50,21 @@
 
                             <li>
                                 <input type="checkbox" id="toggle-2" class="toggle-checkbox">
-                                <label for="toggle-2" class="toggle-title"><h3>2 : La modélisation du projet V1</h3></label>
+                                <label for="toggle-2" class="toggle-title"><h3>2 : La modélisation du projet version 1</h3></label>
                                 <p
                                         class="toggle-content">Une fois la vision clarifiée, notre équipe expérimentée crée une première version du modèle en utilisant des outils de modélisation dédiés à la découpe et gravure laser. Cette étape initiale jette les bases de votre projet.<br><br></p>
                             </li>
 
                             <li>
                                 <input type="checkbox" id="toggle-3" class="toggle-checkbox">
-                                <label for="toggle-3" class="toggle-title"><h3>3 : L'Échange sur le projet V1</h3></label>
+                                <label for="toggle-3" class="toggle-title"><h3>3 : L'Échange sur le projet version 1</h3></label>
                                 <p
                                         class="toggle-content">Nous collaborons avec vous pour discuter de la première version du modèle. Votre feedback est essentiel pour ajuster et affiner le design selon vos souhaits.<br><br></p>
                             </li>
 
                             <li>
                                 <input type="checkbox" id="toggle-4" class="toggle-checkbox">
-                                <label for="toggle-4" class="toggle-title"><h3>4 : Ajustement et remodélisation du projet pour la V_final</h3></label>
+                                <label for="toggle-4" class="toggle-title"><h3>4 : Ajustement et remodélisation du projet pour la version finale</h3></label>
                                 <p
                                         class="toggle-content">Nous continuons à ajuster et à remodeler le projet jusqu'à ce que nous parvenions à la version finale qui vous satisfait pleinement.<br><br></p>
                             </li>
@@ -124,8 +124,8 @@
                <div class="reseaux">
                    <h3>Nos Réseaux :<br><br></h3>
                    <p>
-                       <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="../Ressources/FB2.png" alt="Facebook" class="resicon"></a>
-                       <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="../Ressources/IN2.png" alt="Instagram" class="resicon"></a>
+                       <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="Ressources/FB2.png" alt="Facebook" class="resicon"></a>
+                       <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="Ressources/IN2.png" alt="Instagram" class="resicon"></a>
                    </p>
                </div>
            </footer>
