--- a/Contact.html
+++ b/Contact.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Contact</title>
-        <link rel="icon" href="../Ressources/Logo%20avec%20fond%20en%20cercle.png" type="image/png">
+        <link rel="icon" href="Ressources/Logo%20avec%20fond%20en%20cercle.png" type="image/png">
         <link rel="stylesheet" href="Contact.css">
-        <link rel="stylesheet" href="../normalize.css">
+        <link rel="stylesheet" href="normalize.css">
     </head>
 
     <body>
@@ -17,13 +17,13 @@
                 <nav>
                     <p><h3>Menu</h3><br><br></p>
                     <ul>
-                        <li> <a href="../Accueil/Accueil.html">Accueil</a></li>
+                        <li> <a href="index.html">Accueil</a></li>
                         <br>
-                        <li><a href="../Nos%20Modèles/Nos%20Modèles.html">Nos Modèles</a></li>
+                        <li><a href="Nos%20Modèles.html">Nos Modèles</a></li>
                         <br>
-                        <li> <a href="../Nos%20Projets/Nos%20Projets.html">Nos Projets</a></li>
+                        <li> <a href="Nos%20Projets.html">Nos Projets</a></li>
                         <br>
-                        <li> <a href="../La%20Creation/La%20Création.html">La Création</a></li>
+                        <li> <a href="La%20Création.html">La Création</a></li>
                         <br>
                         <li> <a href="../Contact/Contact.html">Contact</a></li>
                         <br>
@@ -94,8 +94,8 @@
             <div class="reseaux">
                 <h3>Nos Réseaux :<br><br></h3>
                 <p>
-                    <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="../Ressources/FB2.png" alt="Facebook" class="resicon"></a>
-                    <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="../Ressources/IN2.png" alt="Instagram" class="resicon"></a>
+                    <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="Ressources/FB2.png" alt="Facebook" class="resicon"></a>
+                    <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="Ressources/IN2.png" alt="Instagram" class="resicon"></a>
                 </p>
             </div>
         </footer>
