--- a/Nos Projets.html
+++ b/Nos Projets.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Nos Projets</title>
-        <link rel="icon" href="../Ressources/Logo%20avec%20fond%20en%20cercle.png" type="image/png">
+        <link rel="icon" href="Ressources/Logo%20avec%20fond%20en%20cercle.png" type="image/png">
         <link rel="stylesheet" href="Nos%20Projets.css">
-        <link rel="stylesheet" href="../normalize.css">
+        <link rel="stylesheet" href="normalize.css">
     </head>
 
     <body>
@@ -17,15 +17,15 @@
                 <nav>
                     <p><h3>Menu</h3><br><br></p>
                     <ul>
-                        <li> <a href="../Accueil/Accueil.html">Accueil</a></li>
+                        <li> <a href="index.html">Accueil</a></li>
                         <br>
-                        <li><a href="../Nos%20Modèles/Nos%20Modèles.html">Nos Modèles</a></li>
+                        <li><a href="Nos%20Modèles.html">Nos Modèles</a></li>
                         <br>
-                        <li> <a href="../Nos%20Projets/Nos%20Projets.html">Nos Projets</a></li>
+                        <li> <a href="../Nos%20Projets/Nos Projets.html">Nos Projets</a></li>
                         <br>
-                        <li> <a href="../La%20Creation/La%20Création.html">La Création</a></li>
+                        <li> <a href="La%20Création.html">La Création</a></li>
                         <br>
-                        <li> <a href="../Contact/Contact.html">Contact</a></li>
+                        <li> <a href="Contact.html">Contact</a></li>
                         <br>
                     </ul>
                 </nav>
@@ -44,7 +44,7 @@
                    
                    <div class="pr1">
                        <div class="imgpr1">
-                           <img src="../Ressources/horloge.JPG" alt="horloge alpine réalisée à la gravuse/découpeuse laser." class="pic1">
+                           <img src="Ressources/horloge.JPG" alt="horloge alpine réalisée à la gravuse/découpeuse laser." class="pic1">
                        </div>
 
                        <div class="txtpr1">
@@ -57,7 +57,7 @@
 
                    <div class="pr2">
                        <div class="imgpr2">
-                           <img src="../Ressources/worldmap.JPG" alt="Carte du monde en bois et liège." class="pic2">
+                           <img src="Ressources/worldmap.JPG" alt="Carte du monde en bois et liège." class="pic2">
                        </div>
 
                        <div class="txtpr2">
@@ -70,7 +70,7 @@
 
                    <div class="pr3">
                        <div class="imgpr3">
-                           <img src="../Ressources/logobar.jpeg" alt="Logo en bois de la société El Trio Factory réalisé à la graveuse laser" class="pic3">
+                           <img src="Ressources/logobar.jpeg" alt="Logo en bois de la société El Trio Factory réalisé à la graveuse laser" class="pic3">
                        </div>
 
                        <div class="txtpr3">
@@ -96,8 +96,8 @@
                     <div class="reseaux">
                         <h3>Nos Réseaux :<br><br></h3>
                         <p>
-                            <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="../Ressources/FB2.png" alt="Facebook" class="resicon"></a>
-                            <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="../Ressources/IN2.png" alt="Instagram" class="resicon"></a>
+                            <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="Ressources/FB2.png" alt="Facebook" class="resicon"></a>
+                            <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="Ressources/IN2.png" alt="Instagram" class="resicon"></a>
                         </p>
                     </div>
                 </footer>
