--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     </head>
 
     <body>
-        <div class="all"></div>
+
            <header>
                <h1>Accueil</h1>
+               <div class="logoheader">
+                   <img src="Ressources/Logo%20Gravure%20Typo%20Blanche%20sans%20fond%20.png" alt="Logo El Trio Gravure" class="logoimg">
+               </div>
            </header>
             <div class="inter">
                 <nav>
