--- a/Nos Modèles.html
+++ b/Nos Modèles.html
@@ -9,17 +9,17 @@
     </head>
 
     <body>
-        <div class="all"></div>
            <header>
                <h1>Nos Modèles</h1>
            </header>
+
             <div class="inter">
                 <nav>
                     <p><h3>Menu</h3><br><br></p>
                     <ul>
                         <li> <a href="index.html">Accueil</a></li>
                         <br>
-                        <li><a href="../Nos%20Modèles/Nos Modèles.html">Nos Modèles</a></li>
+                        <li><a href="Nos%20Modèles.html">Nos Modèles</a></li>
                         <br>
                         <li> <a href="Nos%20Projets.html">Nos Projets</a></li>
                         <br>
@@ -54,7 +54,6 @@
                                <audio id="audioPlayer" preload="auto">
                                    <source src="Ressources/Georges%2520Brassens%2520-%2520Le%2520gorille.mp3" type="audio/mp3">
                                </audio>
-
                            </div>
 
                            <div class="txtmod1">
@@ -75,7 +74,7 @@
 
                        <div class="mod2">
                            <div class="imgmod2">
-                               <img src="https://static.wixstatic.com/media/a3b586_10f948971ac646829895882ce7acc49c~mv2.png" alt="Photo de raton laveur réalisé à la découpeuse laser." class="pic2">
+                               <img src="/Ressources/rocket.JPG" alt="Photo de raton laveur réalisé à la découpeuse laser." class="pic2">
                            </div>
 
                            <div class="txtmod2">
@@ -183,22 +182,21 @@
             </div>
 
 
-                <footer>
-                    <div class="telmail">
-                        <p> <h3>Contactez-Nous: </h3><br><br></p>
-                        <p>
-                            Mail : <a href="mailto:gravure@eltriofatory.com">gravure@eltriofatory.com</a> <br><br>
-                            Téléphone : <a href="tel:+32472096563">+32 472 09 65 63</a>
-                        </p>
-                    </div>
-                    <div class="reseaux">
-                        <h3>Nos Réseaux :<br><br></h3>
-                        <p>
-                            <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="Ressources/FB2.png" alt="Facebook" class="resicon"></a>
-                            <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="Ressources/IN2.png" alt="Instagram" class="resicon"></a>
-                        </p>
-                    </div>
-                </footer>
-        </div>
+            <footer>
+                <div class="telmail">
+                    <p> <h3>Contactez-Nous: </h3><br><br></p>
+                    <p>
+                        Mail : <a href="mailto:gravure@eltriofatory.com">gravure@eltriofatory.com</a> <br><br>
+                        Téléphone : <a href="tel:+32472096563">+32 472 09 65 63</a>
+                    </p>
+                </div>
+                <div class="reseaux">
+                    <h3>Nos Réseaux :<br><br></h3>
+                    <p>
+                        <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="Ressources/FB2.png" alt="Facebook" class="resicon"></a>
+                        <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="Ressources/IN2.png" alt="Instagram" class="resicon"></a>
+                    </p>
+                </div>
+            </footer>
     </body>
 </html>
