--- a/Nos Projets.html
+++ b/Nos Projets.html
@@ -9,7 +9,6 @@
     </head>
 
     <body>
-        <div class="all"></div>
            <header>
                <h1>Nos Projets</h1>
            </header>
@@ -21,7 +20,7 @@
                         <br>
                         <li><a href="Nos%20Modèles.html">Nos Modèles</a></li>
                         <br>
-                        <li> <a href="../Nos%20Projets/Nos Projets.html">Nos Projets</a></li>
+                        <li> <a href="Nos%20Projets.html">Nos Projets</a></li>
                         <br>
                         <li> <a href="La%20Création.html">La Création</a></li>
                         <br>
@@ -85,22 +84,22 @@
             </div>
 
 
-                <footer>
-                    <div class="telmail">
-                        <p> <h3>Contactez-Nous: </h3><br><br></p>
-                        <p>
-                            Mail : <a href="mailto:gravure@eltriofatory.com">gravure@eltriofatory.com</a> <br><br>
-                            Téléphone : <a href="tel:+32472096563">+32 472 09 65 63</a>
-                        </p>
-                    </div>
-                    <div class="reseaux">
-                        <h3>Nos Réseaux :<br><br></h3>
-                        <p>
-                            <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="Ressources/FB2.png" alt="Facebook" class="resicon"></a>
-                            <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="Ressources/IN2.png" alt="Instagram" class="resicon"></a>
-                        </p>
-                    </div>
-                </footer>
-        </div>
+            <footer>
+                <div class="telmail">
+                    <p> <h3>Contactez-Nous: </h3><br><br></p>
+                    <p>
+                        Mail : <a href="mailto:gravure@eltriofatory.com">gravure@eltriofatory.com</a> <br><br>
+                        Téléphone : <a href="tel:+32472096563">+32 472 09 65 63</a>
+                    </p>
+                </div>
+                <div class="reseaux">
+                    <h3>Nos Réseaux :<br><br></h3>
+                    <p>
+                        <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="Ressources/FB2.png" alt="Facebook" class="resicon"></a>
+                        <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="Ressources/IN2.png" alt="Instagram" class="resicon"></a>
+                    </p>
+                </div>
+            </footer>
+
     </body>
 </html>
