--- a/La Création.html
+++ b/La Création.html
@@ -22,7 +22,7 @@
                         <br>
                         <li> <a href="Nos%20Projets.html">Nos Projets</a></li>
                         <br>
-                        <li> <a href="../La%20Creation/La Création.html">La Création</a></li>
+                        <li> <a href="La%20Création.html">La Création</a></li>
                         <br>
                         <li> <a href="Contact.html">Contact</a></li>
                         <br>
@@ -36,7 +36,7 @@
                    </div>
 
                    <div class="vid">
-                       <iframe width="560" height="315" src="Ressources/HD%20Epic%20Sax%20Gandalf.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="vidgandalf"></iframe>
+                       <iframe width="560" height="315" src="Ressources/HD%20Epic%20Sax%20Gandalf.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="vidéo gravure étapes"></iframe>
                    </div>
 
                    <div class="step">
