--- a/Contact.html
+++ b/Contact.html
@@ -9,10 +9,10 @@
     </head>
 
     <body>
-        <div class="all"></div>
            <header>
                <h1>Contact</h1>
            </header>
+
             <div class="inter">
                 <nav>
                     <p><h3>Menu</h3><br><br></p>
@@ -25,7 +25,7 @@
                         <br>
                         <li> <a href="La%20Création.html">La Création</a></li>
                         <br>
-                        <li> <a href="../Contact/Contact.html">Contact</a></li>
+                        <li> <a href="Contact.html">Contact</a></li>
                         <br>
                     </ul>
                 </nav>
@@ -83,22 +83,21 @@
             </div>
 
 
-        <footer>
-            <div class="telmail">
-                <p> <h3>Contactez-Nous: </h3><br><br></p>
-                <p>
-                    Mail : <a href="mailto:gravure@eltriofatory.com">gravure@eltriofatory.com</a> <br><br>
-                    Téléphone : <a href="tel:+32472096563">+32 472 09 65 63</a>
-                </p>
-            </div>
-            <div class="reseaux">
-                <h3>Nos Réseaux :<br><br></h3>
-                <p>
-                    <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="Ressources/FB2.png" alt="Facebook" class="resicon"></a>
-                    <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="Ressources/IN2.png" alt="Instagram" class="resicon"></a>
-                </p>
-            </div>
-        </footer>
-        </div>
+            <footer>
+                <div class="telmail">
+                    <p> <h3>Contactez-Nous: </h3><br><br></p>
+                    <p>
+                        Mail : <a href="mailto:gravure@eltriofatory.com">gravure@eltriofatory.com</a> <br><br>
+                        Téléphone : <a href="tel:+32472096563">+32 472 09 65 63</a>
+                    </p>
+                </div>
+                <div class="reseaux">
+                    <h3>Nos Réseaux :<br><br></h3>
+                    <p>
+                        <a href="https://www.facebook.com/el.trio.gravure" target="_blank"><img src="Ressources/FB2.png" alt="Facebook" class="resicon"></a>
+                        <a href="https://www.instagram.com/el_trio_gravure/" target="_blank"><img src="Ressources/IN2.png" alt="Instagram" class="resicon"></a>
+                    </p>
+                </div>
+            </footer>
     </body>
 </html>
