--- a/Nos Modèles.html
+++ b/Nos Modèles.html
@@ -74,7 +74,7 @@
 
                        <div class="mod2">
                            <div class="imgmod2">
-                               <img src="/Ressources/rocket.JPG" alt="Photo de raton laveur réalisé à la découpeuse laser." class="pic2">
+                               <img src="https://static.wixstatic.com/media/a3b586_10f948971ac646829895882ce7acc49c~mv2.png" alt="Photo de raton laveur réalisé à la découpeuse laser." class="pic2">
                            </div>
 
                            <div class="txtmod2">
