--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
 </header>
 <main>
     <section id="about">
-        <h2>À propos du sommeil des paeeendas</h2>
+        <h2>V4 mobile</h2>
         <p>Les pandas géants sont connus pour leur sommeil prolongé. Ils peuvent dormir entre 10 et 16 heures par jour. Leur régime alimentaire, principalement composé de bambou, est pauvre en nutriments, ce qui signifie qu'ils doivent économiser leur énergie en dormant beaucoup.</p>
         <img src="panda-sleeping.jpg" alt="Panda dormant">
     </section>
